# Leadops

./: .editorconfig  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  LEADOPS_AUDIT_REPORT.md  Makefile  README.md  config.backup.json  config.json  config.py  dev.ps1  docker-compose.yml  healthcheck.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_api.py  session_encrypt.py
.github/workflows/: ci.yml
api/: server.py
backend/auth/: jwt_auth.py  session.py
backend/config/: .env.example  config.json  loader.py  pricing.json
backend/core/: browser.py  cli.py  exporter.py  health.py  job_manager.py  normalizer.py  run_api.py  security.py  server.py
backend/payments/: __init__.py  stripe_checkout.py
backend/scrapers/: base.py
backend/scrapers/agency/: clutch.py  goodfirms.py
backend/scrapers/local/: maps.py
backend/scrapers/startup/: linkedin.py
backend/storage/: database.py  merge.py  models.py
content/: site-content.json
docs/: SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: button.tsx  (+2 more)
frontend/src/hooks/: use-toast.ts  use-toast.tsx  use-websocket-status.ts  useSiteContent.ts
frontend/src/i18n/: i18n.ts
frontend/src/lib/: api.ts  site-content.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Exports.tsx  Logs.tsx  Scrapers.tsx  Settings.tsx
frontend/src/test/: App.test.tsx  EmptyState.test.tsx  ErrorBoundary.test.tsx  LoadingState.test.tsx  StatusBadge.test.tsx  setup.ts
scrapers/: base.py  clutch.py  goodfirms.py  linkedin.py  maps.py  merge.py
sessions/api_profile/: Last Browser  Local State
sessions/api_profile/Default/: BrowsingTopicsState  DIPS  Preferences  Secure Preferences  Visited Links  Web Data
sessions/api_profile/GrShaderCache/: data_0  data_1  index
storage/: leadops.db
tests/: test_extractors.py
(+37 files in other folders)
