[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "leadops"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.52.0",
    "pandas==2.2.3",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.1",
    "openpyxl==3.1.5",
    "pyarrow==20.0.0",
    "python-dotenv==1.1.0",
    "cryptography~=44.0.3",
    "slowapi==0.1.9",
    "httptools>=0.6.0",
    "websockets>=14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[tool.coverage.run]
source = ["api", "scrapers", "config", "session_encrypt"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 30
show_missing = true
